New text entered in the README

--- a/README
+++ b/README
@@ -1,1 +1,7 @@
 Learning how to work with GitHub.
+
+Now these are the local changes in the file.
+
+I will save it and then commit on my local repository.
+
+Followed by a push to sync it to my github.
