Text entered in the README using sidebranch

--- a/README
+++ b/README
@@ -5,3 +5,5 @@ Now these are the local changes in the file.
 I will save it and then commit on my local repository.
 
 Followed by a push to sync it to my github.
+
+This text is entered in the side branch.
