--- a/README
+++ b/README
@@ -5,3 +5,5 @@ Now these are the local changes in the file.
 I will save it and then commit on my local repository.
 
 Followed by a push to sync it to my github.
+
+This line is entered in the master branch. I will save it and try to merge.
